# MuseScore-3.6.2

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  MACOS_ARM64_README.md  Makefile  Makefile.osx  WINDOWS_QT6_README.md  all.h  build-linux.sh  build-macos.sh  build-windows.bat  build_signed_dmg.sh  find_xcode_teams.sh  msvc_build.bat
.github/workflows/: ci_macos_qt6.yml  ci_qt6_linux.yml  ci_windows_qt6.yml
MuseScoreARM64.xcodeproj/: project.pbxproj
MuseScoreARM64.xcodeproj/xcshareddata/xcschemes/: MuseScore ARM64.xcscheme
aeolus/: CMakeLists.txt
audio/: CMakeLists.txt
audio/drivers/: jackaudio.cpp
audio/midi/: midifile.cpp
audio/midi/fluid/: fluid.cpp  fluidgui.cpp  sfont.cpp
audio/midi/zerberus/: sfz.cpp  zerberusgui.cpp
avsomr/: avsomrreader.cpp
awl/: pitchlabel.cpp  posedit.cpp  poslabel.cpp
buildscripts/xen_tuner/: README.md  StageXenTuner.cmake  TestStageXenTuner.cmake  qt6-runtime.patch
bww2mxml/: mxmlwriter.cpp
crashreporter/: CMakeLists.txt
effects/: CMakeLists.txt
effects/freeverb/: freeverb.qml
fonttools/: genft.cpp
global/: CMakeLists.txt
importexport/bww/: importbww.cpp  lexer.cpp  parser.cpp
importexport/capella/: capxml.cpp
importexport/guitarpro/: importgtp-gp6.cpp  importgtp.cpp  importgtp.h
importexport/midiimport/: importmidi_chord.cpp  importmidi_inner.cpp  importmidi_instrument.cpp  importmidi_model.cpp
importexport/musedata/: musedata.cpp
importexport/musicxml/: exportxml.cpp  importmxmlnoteduration.cpp  importmxmlnotepitch.cpp  importmxmlpass1.cpp  importmxmlpass2.cpp  importmxmlpass2.h  importxml.cpp  importxmlfirstpass.cpp  musicxmlsupport.cpp  musicxmlsupport.h
importexport/ove/: ove.cpp  ove.h
libmscore/: CMakeLists.txt  accidental.cpp  accidental.h  ambitus.cpp  arpeggio.cpp  arpeggio.h  articulation.cpp  articulation.h  bagpembell.cpp  barline.cpp  barline.h  beam.cpp  bend.cpp  box.cpp  breath.cpp  bsp.cpp  bsymbol.cpp  chord.cpp  chordline.cpp  chordline.h  chordlist.cpp  chordrest.cpp  clef.cpp  cmd.cpp  connector.cpp  drumset.cpp  dynamic.cpp  dynamic.h  edit.cpp  element.cpp  element.h  excerpt.cpp  fermata.cpp  fermata.h  figuredbass.cpp  fraction.h  fret.cpp  glissando.cpp  glissando.h  groups.cpp  (+90 more)
main/: CMakeLists.txt  main.cpp  modulessetup.cpp
miditools/: xml2smf.cpp  xmlwriter.cpp
mscore/: CMakeLists.txt  chordview.cpp  continuouspanel.cpp  dragdrop.cpp  drumview.cpp  editstyle.cpp  enableplayforwidget.cpp  enableplayforwidget.h  events.cpp  exampleview.cpp  exportly.cpp  file.cpp  gridcanvas.cpp  help.cpp  instrwidget.cpp  musescore.cpp  musescore.h  navigator.cpp  osc.cpp  palette.cpp  pianotools.cpp  preferences.cpp  prefsdialog.cpp  qmldockwidget.h  ruler.cpp  scoreBrowser.cpp  scoreInfo.h  scorePreview.cpp  scoretab.cpp  scoretab.h  scoreview.cpp  scoreview.h  searchComboBox.cpp  seq.cpp  seq.h  shortcut.cpp  stafftextproperties.cpp  startcenter.cpp  startcenter.h  startupWizard.cpp  (+10 more)
mscore/cloud/: loginmanager.cpp  loginmanager_p.h  uploadscoredialog.cpp
mscore/debugger/: debugger.cpp
mscore/importmidi_ui/: importmidi_delegate.cpp  importmidi_panel.cpp  importmidi_view.cpp
mscore/inspector/: alignSelect.cpp  inspectorBase.cpp
mscore/migration/: scoremigrator_3_6.cpp
mscore/mixer/: mixer.cpp  mixertrackchannel.cpp  mixertrackpart.cpp
mscore/palette/: palettetree.cpp  palettewidget.cpp  palettewidget.h  paletteworkspace.cpp
mscore/pianoroll/: pianolevels.cpp  pianoruler.cpp  pianoview.cpp
mscore/plugin/: mscorePlugins.cpp  pluginCreator.cpp  pluginManager.cpp  qmledit.cpp  qmlpluginengine.cpp
mscore/plugin/api/: cursor.cpp  cursor.h  elements.cpp  elements.h  excerpt.h  instrument.cpp  instrument.h  part.cpp  part.h  playevent.h  qmlpluginapi.cpp  qmlpluginapi.h  score.h  scoreelement.h  util.cpp  util.h
mscore/qml/: msqmlengine.cpp  nativemenu.cpp  nativemenu.h
mscore/qml/palettes/: MoreElementsPopup.qml  Palette.qml  PaletteTree.qml  PalettesWidgetHeader.qml  StyledButton.qml  StyledIcon.qml  StyledPopup.qml  TreePaletteHeader.qml
mscore/script/: script.cpp  scriptentry.cpp  testscript.cpp
mtest/: CMakeLists.txt  testutils.cpp
mtest/libmscore/midimapping/: tst_midimapping.cpp
mtest/libmscore/spanners/: ottava-crossstaff.mscx  tst_spanners.cpp
mtest/scripting/: CMakeLists.txt  invalidImport.qml  invalidMetadataPlugin.qml  lifecycleDockPlugin.qml  lifecyclePlugin.qml  nonVisualLifecyclePlugin.qml  tst_pluginlifecycle.cpp  tst_scripting.cpp  visualPlugin.qml
omr/: omr.cpp  omrpage.cpp
plugins/musescore-xen-tuner/: .gitattributes
plugins/musescore-xen-tuner/Xen Tuner/: clear tuning cache.qml  display cents.qml  (+5 more)
rdoc/: CMakeLists.txt
scripts/: build_macos_arm64.sh  build_windows_qt6.ps1  deploy_macos_app.sh  deploy_windows_qt6.ps1  package_macos_arm64.sh  setup_ccache_macos.sh  setup_macos_arm64.sh  smoke_test_linux_app.sh  verify_linux_appdir.sh  verify_macos_app.sh  verify_macos_arm64.sh  verify_windows_qt6.ps1  xcode_macos_arm64.sh
share/: CMakeLists.txt
share/plugins/: abc_import.qml  random2.qml
share/sound/: CMakeLists.txt
telemetry/: CMakeLists.txt  actioneventobserver.cpp
telemetry/widgets/: telemetrypermissiondialog.cpp
